--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,10 @@
     --sidebar-color: #16a34a;
     --shelf-color: white;
     --card-color: #fdba74;
+    --add-button-color: #cbd5e1;
+    --dialog-box-color: #f1f5f9;
+    --submit-button-color: #86efac;
+    --cancel-button-color: #fca5a5;
 }
 
 html {
@@ -44,7 +48,18 @@ body {
 
 .header-title {
     color: white;
-    font-size: 50px;
+    font-size: 60px;
+    margin: 20px 0px;
+}
+
+.open-dialog {
+    width: 130px;
+    height: 50px;
+    border-radius: 30px;
+    background-color: var(--add-button-color);
+    margin-bottom: 10px;
+
+    font-size: 20px;
 }
 
 /* Book Shelf */
@@ -55,14 +70,16 @@ body {
     background-color: var(--shelf-color);
 
     box-shadow: inset 0px 10px 5px -5px gray;
+
 }
 
 .book-list {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-    grid-auto-rows: minmax(200px, 1fr);
+    grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
+    grid-auto-rows: minmax(300px, 1fr);
     gap: 25px;
     margin: 0px;
+    justify-content: center;
 
     padding: 25px;
     text-align: center;
@@ -72,8 +89,8 @@ body {
 
 .book {
     list-style-type: none;
-    border: 1px solid black;
     border-radius: 10px;
+    box-shadow: 2px 2px 4px 2px gray;
     
     padding: 15px;
     padding-bottom: 50px;
@@ -81,6 +98,10 @@ body {
 
     position: relative;
     overflow-wrap: break-word;
+
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 150px;
 }
 
 .book-info {
@@ -92,24 +113,24 @@ body {
     font-size: 30px;
     font-weight: bold;
     font-style: italic;
-    margin-bottom: 25px;
+    margin: 0px;
 }
 
 .delete-img {
     width: 40px;
     filter: invert(9%) sepia(97%) saturate(4092%) hue-rotate(356deg) brightness(103%) contrast(111%);
-    /* color: #a10000; */
     position: absolute;
     bottom: 5px;
     right: 5px;
 }
 
-/* slider */
+/* Slider */
+
 .switch {
     position: relative;
     display: inline-block;
     width: 60px;
-    height: 34px;
+    height: 30px;
 }
 
 .switch input {
@@ -128,14 +149,14 @@ body {
     background-color: #ccc;
     -webkit-transition: .4s;
     transition: .4s;
-    border-radius: 34px;
+    border-radius: 30px;
 }
 
 .slider:before {
   position: absolute;
   content: "";
-  height: 26px;
-  width: 26px;
+  height: 22px;
+  width: 22px;
   left: 4px;
   bottom: 4px;
   background-color: white;
@@ -145,11 +166,11 @@ body {
 }
 
 input:checked + .slider {
-  background-color: #2196F3;
+  background-color: var(--header-color);
 }
 
 input:focus + .slider {
-  box-shadow: 0 0 1px #2196F3;
+  box-shadow: 0 0 1px var(--header-color);
 }
 
 input:checked + .slider:before {
@@ -158,11 +179,80 @@ input:checked + .slider:before {
   transform: translateX(26px);
 }
 
-/* Side bar */
+/* Dialog Box */
 
-.side-bar {
-    background-color: var(--sidebar-color);
-
-    grid-row: 1 / 3;
+.form-container {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
+.dialog-box {
+    height: 450px;
+    width: 600px;
+    border-radius: 5px;
+    padding: 20px;
+
+    background-color: var(--dialog-box-color);
+}
+
+.form-title {
+    font-size: 40px;
+    margin-top: 0px;
+    margin-bottom: 40px;
+    text-align: center;
+}
+
+.book-form {
+    display: grid;
+    grid-template-columns: 1fr;
+    row-gap: 15px;
+}
+
+.form-input {
+    font-size: 30px;
+
+    display: grid;
+    grid-template-columns: 200px 1fr;
+    align-items: center;
+}
+
+.user-input {
+    width: 300px;
+    height: 30px;
+
+    font-size: 18px;
+}
+
+.user-input#pages {
+    width: 80px;
+}
+
+.user-input#read {
+    width: 20px;
+    margin: 0px;
+}
+
+.form-actions {
+    display: flex;
+    justify-content: center;
+    gap: 40px;
+    margin-top: 20px;
+}
+
+.form-buttons {
+    width: 150px;
+    height: 40px;
+    border-radius: 10px;
+
+    font-size: 20px;
+}
+
+.submit-dialog {
+    background-color: var(--submit-button-color);
+} 
+
+.cancel-dialog {
+    background-color: var(--cancel-button-color);
+}
