Add Custom Validation Messages
Added custom validation messages when user does not meet the validation
criteria of the "Add Book" input. Includes dynamic error messages;
users will receive the error messages not only when they click on the
submit button, but as they violated the validation criteria.

--- a/styles.css
+++ b/styles.css
@@ -181,6 +181,10 @@ input:checked + .slider:before {
 
 /* Dialog Box */
 
+.required-input {
+    color: red;
+}
+
 .form-container {
     height: 100%;
     display: flex;
